fix (inspector): inspector tabs went past the visible area when scrolling down.

--- a/src/components/panel-tabs/editor.scss
+++ b/src/components/panel-tabs/editor.scss
@@ -1,6 +1,6 @@
 .ugb-panel-tabs {
 	position: sticky;
-	top: -1px;
+	top: 47px;
 	z-index: 5;
 	.ugb-panel-tabs__wrapper {
 		display: flex !important;
@@ -78,7 +78,7 @@
 		border-bottom: 1px solid #e1e1e1;
 		// Sticky.
 		position: sticky;
-		top: 81px;
+		top: 128px;
 		z-index: 4;
 	}
 	background: #fafafa;
